fixed repeating classes schedule on mobile, added padding to bottom of quote for gallery

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -11002,6 +11002,10 @@ section.classes {
 .modal .modal-dialog {
   max-width: 800px; }
 
+@media (max-width: 767.98px) {
+  .modal .modal-footer div.time-label {
+    margin-bottom: 5px; } }
+
 .current-gallery {
   background: #ebeeef; }
   @media (min-width: 576px) {
