--- a/sass/theme/_classes_page.scss
+++ b/sass/theme/_classes_page.scss
@@ -121,4 +121,12 @@ section.classes {
 	.modal-dialog {
 		max-width: 800px;
 	}
+
+	.modal-footer {
+		div.time-label {
+			@include media-breakpoint-down(sm) {
+				margin-bottom: 5px;
+			}
+		}
+	}
 }
